Replaced deprecated API calls